<resources>
    <string name="app_name">CV App</string>
    <string name="menu_info">Info</string>
    <string name="menu_expertise">Expertise</string>
    <string name="menu_skills">Skills</string>
    <string name="menu_formation">Education</string>
    <string name="menu_miscellaneous">Diverse</string>
    <string name="description">Description</string>
    <string name="mail_subject">New Opportunity</string>
    <string name="permission_explanation">Permission request</string>
    <string name="ok_dialog">OK</string>
    <string name="tasks">Tasks:</string>
    <string name="achievements">Achievements:</string>
</resources>
