<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/info_fragment"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/menu_info"/>
    <item
        android:id="@+id/expertise_fragment"
        android:icon="@drawable/expertise"
        android:title="@string/menu_expertise"/>
    <item
        android:id="@+id/skill_fragment"
        android:icon="@drawable/skills"
        android:title="@string/menu_skills"/>
    <item
        android:id="@+id/education_fragment"
        android:icon="@drawable/formation"
        android:title="@string/menu_formation"/>
    <item
        android:id="@+id/miscellaneous_fragment"
        android:icon="@drawable/awards"
        android:title="@string/menu_miscellaneous"/>
</menu>